# main.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
+	"github.com/mht77/mahoor/middlewares"
 	"github.com/swaggo/files"
 	"github.com/swaggo/gin-swagger"
 	"gorm.io/driver/postgres"
@@ -19,6 +20,10 @@ import (
 	"github.com/mht77/mahoor/services"
 )
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Enter "Bearer {your_token}" to authenticate.
 func main() {
 	err := godotenv.Load()
 	if err != nil {
@@ -35,39 +40,45 @@ func main() {
 	docs.SwaggerInfo.Title = "Charity Swagger"
 	docs.SwaggerInfo.Description = "API for Charity products"
 	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.Host = os.Getenv("HOST")
 
 	r := gin.Default()
+
 	config := cors.DefaultConfig()
-	config.AllowOrigins = []string{"http://localhost:5173", os.Getenv("ALLOW_ORIGIN")}
+	config.AllowOrigins = []string{"http://localhost:5173", os.Getenv("ALLOW_ORIGIN"), os.Getenv("ALLOW_ORIGIN2")}
 	r.Use(cors.New(config))
 	r.GET("/", func(c *gin.Context) {
 		c.String(200, "Hello, Charity!")
 	})
 
-	routes := r.Group("")
+	productController := controllers.NewProductController(services.NewProductService(repositories.NewProductRepository(db)))
+	products := r.Group("products")
 	{
-		productController := controllers.NewProductController(services.NewProductService(repositories.NewProductRepository(db)))
-		products := routes.Group("products")
-		{
-			products.POST("/", productController.CreateProduct)
-			products.GET("/:id", productController.GetProductByID)
-			products.GET("/", productController.GetAllProducts)
-			products.PUT("/:id", productController.UpdateProduct)
-			products.DELETE("/:id", productController.DeleteProduct)
-		}
-
-		sellController := controllers.NewSellController(services.NewSellService(repositories.NewSellRepository(db)))
-		sells := routes.Group("sells")
-		{
-			sells.GET("/", sellController.GetAllSells)
-			sells.GET("/:productId", sellController.GetSellsByProductID)
-			sells.POST("/", sellController.CreateSell)
-			sells.DELETE("/:id", sellController.DeleteSell)
-		}
+		products.POST("/", productController.CreateProduct)
+		products.GET("/:id", productController.GetProductByID)
+		products.GET("/", productController.GetAllProducts)
+		products.PUT("/:id", productController.UpdateProduct)
+		products.DELETE("/:id", productController.DeleteProduct)
 	}
 
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	sellController := controllers.NewSellController(services.NewSellService(repositories.NewSellRepository(db)))
+	sells := r.Group("sells")
+	{
+		sells.GET("/", sellController.GetAllSells)
+		sells.GET("/:productId", sellController.GetSellsByProductID)
+		sells.POST("/", sellController.CreateSell)
+		sells.DELETE("/:id", sellController.DeleteSell)
+	}
+
+	userController := controllers.NewUserController(services.NewUserService(repositories.NewUserRepository(db)))
+	users := r.Group("users")
+	{
+		users.POST("/", userController.CreateUser)
+		users.GET("/", middlewares.AuthMiddleware(), userController.GetAllUsers)
+		users.POST("/token", userController.GetToken)
+	}
+
+	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	r.GET("/health", func(c *gin.Context) {
 		c.JSON(200, gin.H{"status": "healthy"})
 	})
@@ -82,6 +93,7 @@ func migrate(db *gorm.DB) {
 	modelsInterfaces := []interface{}{
 		&models.Product{},
 		&models.Sell{},
+		&models.User{},
 	}
 	err := db.AutoMigrate(modelsInterfaces...)
 	if err != nil {
